--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.0</version>
 		</dependency>
+		<dependency>
+			<groupId>net.jodah</groupId>
+			<artifactId>failsafe</artifactId>
+			<version>2.4.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
