--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
 			<version>2.13.0</version>
 		</dependency>
 		<dependency>
-			<groupId>net.jodah</groupId>
+			<groupId>dev.failsafe</groupId>
 			<artifactId>failsafe</artifactId>
-			<version>2.4.4</version>
+			<version>3.0.0</version>
 		</dependency>
 
 		<dependency>
