--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,24 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.malkusch.km200</groupId>
 	<artifactId>km200</artifactId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.2.3-SNAPSHOT</version>
 	<name>KM200</name>
 	<description>KM200 API</description>
 
+	<parent>
+		<groupId>de.malkusch.parent</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>3.0.1</version>
+	</parent>
+	<url>https://github.com/malkusch/${project.artifactId}</url>
+	<scm>
+		<connection>scm:git:git://github.com/malkusch/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:git@github.com:malkusch/${project.artifactId}.git</developerConnection>
+	</scm>
+	
 	<properties>
+		<github.repository>malkusch/km200</github.repository>
 		<maven.compiler.source>16</maven.compiler.source>
 		<maven.compiler.target>16</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
