--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           java-version: '16'
           distribution: 'adopt'
+          cache: maven
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
 
