Skip tests in release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,12 @@ jobs:
           server-password: MAVEN_PASSWORD
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE }}
       - name: Prepare
-        run: mvn --batch-mode release:prepare -Darguments="-Dgpg.keyname=km200@malkusch.de -Dgpg.passphrase=" -DpushChanges=false
+        run: mvn --batch-mode release:prepare -Darguments="-DskipTests -Dgpg.keyname=km200@malkusch.de -Dgpg.passphrase=" -DpushChanges=false
+
+      - run: false
+
       - name: Push
         run: git push
       - run: git push --tags
       - name: Release    
-        run: mvn --batch-mode release:perform -DconnectionUrl=scm:git:${{ github.server_url }}/${{ github.repository }} -Darguments="-Dgpg.keyname=km200@malkusch.de -Dgpg.passphrase="
+        run: mvn --batch-mode release:perform -DconnectionUrl=scm:git:${{ github.server_url }}/${{ github.repository }} -Darguments="-DskipTests -Dgpg.keyname=km200@malkusch.de -Dgpg.passphrase="
