--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,15 @@
 name: Release
 on: [workflow_dispatch]
+
+env:
+  MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+  MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+  JDK: 16
+  RELEASE_ARGS: -Darguments="-DskipTests -Dgpg.keyname=km200@malkusch.de -Dgpg.passphrase="
+
 jobs:
   publish:
     runs-on: ubuntu-latest
-    env:
-      MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-      MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
     steps:
       - uses: actions/checkout@v3
         # - uses: fregante/setup-git-user@v1
@@ -14,7 +18,7 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
-          java-version: '16'
+          java-version: ${{ env.JDK }}
           distribution: 'adopt'
           cache: maven
           server-id: sonatype-nexus-staging
@@ -22,7 +26,7 @@ jobs:
           server-password: MAVEN_PASSWORD
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE }}
       - name: Prepare
-        run: mvn --batch-mode release:prepare -Darguments="-DskipTests -Dgpg.keyname=km200@malkusch.de -Dgpg.passphrase=" -DpushChanges=false
+        run: mvn --batch-mode release:prepare ${{ env.RELEASE_ARGS }} -DpushChanges=false
 
       - run: false
 
@@ -30,4 +34,4 @@ jobs:
         run: git push
       - run: git push --tags
       - name: Release    
-        run: mvn --batch-mode release:perform -DconnectionUrl=scm:git:${{ github.server_url }}/${{ github.repository }} -Darguments="-DskipTests -Dgpg.keyname=km200@malkusch.de -Dgpg.passphrase="
+        run: mvn --batch-mode release:perform -DconnectionUrl=scm:git:${{ github.server_url }}/${{ github.repository }} ${{ env.RELEASE_ARGS }}
