--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ env:
   MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
   MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
   JDK: 16
-  RELEASE_ARGS: -Darguments="-DskipTests -Dgpg.keyname=km200@malkusch.de -Dgpg.passphrase="
+  RELEASE_ARGS: -Darguments="-DskipTests -Dgpg.passphrase="
 
 jobs:
   prepare:
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: git config --global user.email "markus@malkusch.de"
-      - run: git config --global user.name "Markus Malkusch"
+      - run: git config --global user.email "${{ github.actor }}@github.com"
+      - run: git config --global user.name "${{ github.actor }}"
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
