--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,8 @@
 name: Build
 on: [push]
+
 jobs:
   build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: '16'
-          distribution: 'adopt'
-          cache: maven
-      - name: Build
-        run: mvn --batch-mode --update-snapshots verify
-
+    uses: malkusch/github/.github/workflows/maven-build.yml@master
+    with:
+      JDK_VERSION: 16
