--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,11 @@ on:
         default: true
 
 jobs:
+  build:
+    uses: ./.github/workflows/build.yml
+
   release:
+    needs: [build]
     if: github.ref == 'refs/heads/master'
     uses: malkusch/github/.github/workflows/maven-central-release.yml@master
     with:
