--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.malkusch.km200</groupId>
 	<artifactId>km200</artifactId>
-	<version>2.1.3-SNAPSHOT</version>
+	<version>2.1.3</version>
 	<name>KM200</name>
 	<description>KM200 API</description>
 	<parent>
