--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,4 +9,6 @@ on:
 jobs:
   build:
     uses: malkusch/github/.github/workflows/maven-build.yml@master
+    with:
+      INTEGRATION_TESTS_ENABLED: false
 
