--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.malkusch.km200</groupId>
 	<artifactId>km200</artifactId>
-	<version>3.0.2-SNAPSHOT</version>
+	<version>3.0.2</version>
 	<name>KM200</name>
 	<description>KM200 API</description>
 	<parent>
@@ -15,7 +15,7 @@
         <connection>scm:git:${project.scm.url}</connection>
         <developerConnection>scm:git:${project.scm.url}</developerConnection>
         <url>https://github.com/malkusch/${project.artifactId}</url>
-        <tag>HEAD</tag>
+        <tag>km200-3.0.2</tag>
 	</scm>
 	<properties>
 		<maven.compiler.release>21</maven.compiler.release>
